# mcp_client

./: .env.example  .gitignore  README.md  docker-compose.yml  setup-mcp.sh
database/: init.sql
mcp-client/: README.md  cli.py  client.py  language_server.py  main.py  pyproject.toml
mcp-client/client/: __init__.py  core.py
mcp-client/client/demo/: examples.py
mcp-client/client/health/: monitor.py
mcp-client/client/language/: __init__.py  tools.py
mcp-client/client/test/: runner.py
