[project]
name = "mcp-client"
version = "0.1.0"
description = "Simple MCP client for DeepL translation with VS Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.9.3",
    "postgres-mcp>=0.3.0",
    "python-dotenv>=1.1.0",
    "typing-extensions>=4.0.0",
    "aiohttp>=3.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
